package designpattern.adaptor.classadaptor;

public interface Print {
	public abstract void printString();

	public abstract void printWeak();
}